# image_filter

./: .gitattributes  README.md  edge_api.py  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/image_filter/: MainActivity.kt
ios/: File.txt  Podfile  Untitled.h
ios/Classes/: filter.cpp  filter.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/animations/: sparkle.dart
lib/helper/: filters.dart
lib/providers/: filter_preview_provider.dart  home_provider.dart  image_comparison_provider.dart  image_display_provider.dart
lib/screens/: home.dart  show_image.dart
lib/services/: image_processor.dart
lib/themes/: app_button_styles.dart  app_text_styles.dart  app_theme.dart  app_widgets.dart
lib/widgets/: app_widgets.dart  bottom_controls_widget.dart  filter_preview_widget.dart  image_comparison_slider.dart  show_image_widgets.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: filter.cpp  filter.h
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
